added Jupyter Notebook for Carla

--- a/Nautilus_Performance_App.ipynb
+++ b/Nautilus_Performance_App.ipynb
@@ -442,7 +442,7 @@
     "\n",
     "The aim is to perform with this other musician. It is not listening to you, but is travelling with you as you navigate the depths of this ocean of sound.\n",
     "\n",
-    "When you have reached the end of your score, press the <Space Bar> and the computer will draw its improvisation to a close.\n",
+    "When you have reached the end of your score, press the Space Bar and the computer will draw its improvisation to a close.\n",
     "  "
    ],
    "metadata": {
